@@ -38,17 +38,17 @@
 #include "xprofiler.h"
 
 struct debug_file *machine_debug_file;
-char *machine_debug_filename = 0;
+const char *machine_debug_filename = 0;
 
 /**
  * Header to be added to every debug file.
  */
-static char *debug_header = "This file was automatically generated by Kaffe";
+static const char *debug_header = "This file was automatically generated by Kaffe";
 
 /**
  * Builtin types to add to the debugging file.
  */
-static char *types_header =
+static const char *types_header =
 ".stabs \"int:t1=r1;0020000000000;0017777777777;\",128,0,0,0\n"
 ".stabs \" :t2=*1;\",128,0,0,0\n"
 ".stabs \"byte:t3=r3;-128;127;\",128,0,0,0\n"
@@ -83,7 +83,7 @@ typedef enum {
 	STP_PUBLIC = 2,
 } st_prot_t;
 
-struct debug_file *createDebugFile(char *filename)
+struct debug_file *createDebugFile(const char *filename)
 {
 	struct debug_file *retval = 0;
 
@@ -158,7 +158,7 @@ static const char *df_quals = "/$";
  */
 static void dfHandleClass(struct debug_file *df, struct Hjava_lang_Class *cl)
 {
-	unsigned int lpc;
+	int lpc;
 
 	assert(df != NULL);
 	assert(cl != NULL);
