@@ -1,3 +1,12 @@
+2004-12-13  Adam Heath  <doogie@brainfood.com>
+
+	* kaffe/xprof/callGraph.c, kaffe/xprof/debugFile.c,
+	  kaffe/xprof/debugFile.h, kaffe/xprof/gmonFile.c,
+	  kaffe/xprof/gmonFile.h, kaffe/xprof/mangle.c,
+	  kaffe/xprof/mangle.h, kaffe/xprof/memorySamples.c,
+	  kaffe/xprof/memorySamples.h, kaffe/xprof/xprofiler.c:
+	  Lots of gcc warning fixes.
+	  
 2004-12-14  Michael Koch  <konqueror@gmx.de>
 
 	* libraries/javalib/javax/swing/JTree.java
